fix(ePortfolio): fixed the swiper navigation alignment

--- a/src/components/testimonial/styles/swiper.scss
+++ b/src/components/testimonial/styles/swiper.scss
@@ -29,3 +29,11 @@
 .swiper-slide {
   padding: 0 24px !important;
 }
+
+.swiper-button-prev {
+  left: 0 !important;
+}
+
+.swiper-button-next {
+  right: 0 !important;
+}
